--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "A full-stack linkedin-backed with latest technology",
   "main": "app.ts",
   "scripts": {
-    "test": "express , mongodb , node , mongoose"
+    "test": "express , mongodb , node , mongoose",
+    "build": "tsc --build",
+    "start": "node ./build/app.js",
+    "dev": "nodemon ./src/server.ts"
   },
   "keywords": [
     "node",
@@ -15,6 +18,7 @@
   "author": "Bayzed Bostami <bayzed.dev@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "@types/http-errors": "^2.0.4",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cloudinary": "^2.4.0",
@@ -22,12 +26,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.20.0",
+    "http-errors": "^2.0.0",
     "mailtrap": "^3.4.0",
     "mongoose": "^8.6.1",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
