--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "dotenv": "^16.4.5",
     "express": "^4.20.0",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mailtrap": "^3.4.0",
     "mongoose": "^8.6.1",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
