--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "author": "Bayzed Bostami <bayzed.dev@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "@types/http-errors": "^2.0.4",
     "@types/streamifier": "^0.1.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
@@ -37,13 +36,15 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/body-parser": "^1.19.5",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.6",
+    "@types/http-errors": "^2.0.4",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.12",
-    "@types/node": "^22.5.4",
+    "@types/node": "^22.9.0",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
